# ragindex

./: README.md  config.yaml  main.py  pyproject.toml  requirements.txt  setup.py
ragindex/data/sample_data/: text.txt
ragindex/src/dataprocessing/: data_loader.py
ragindex/src/embeddings_creation/: embedding_generator.py
ragindex/src/generator/: generation_benchmarking.py  main_body.py  models_module.py  prompt.py
ragindex/src/retriever/: retrieval.py  retrieval_benchmarking.py
ragindex/vector_stores/all_minilm_embeddings_chroma/: chroma.sqlite3
ragkit/data/: syntheticdataset.csv  syntheticdataset1.csv
ragkit/src/dataprocessing/: data_loader.py
ragkit/src/embeddings_creation/: embedding_generator.py
ragkit/src/generator/: config.yaml  main_body.py
ragkit/src/retriever/: retrieval.py  retrieval_benchmarking.py
ragpy/src/dataprocessing/: data_loader.py
ragpy/src/embeddings_creation/: config.yaml  embedding_generator.py
ragpy/src/generator/: .env  custom_prompt.txt  generation_benchmarking.py  main_body.py  models_module.py  prompt.py
ragpy/src/retriever/: retrieval.py  retrieval_benchmarking.py
